fix: integrated opentelemetry