@@ -17,6 +17,7 @@ RUN java -Djarmode=layertools -jar application.jar extract
 # AppInsight installation stage
 #
 FROM --platform=amd64 ghcr.io/pagopa/docker-base-springboot-openjdk11:v1.0.1@sha256:bbbe948e91efa0a3e66d8f308047ec255f64898e7f9250bdb63985efd3a95dbf
+ADD --chown=spring:spring https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
 COPY --chown=spring:spring  --from=bootimg dependencies/ ./
 COPY --chown=spring:spring  --from=bootimg snapshot-dependencies/ ./
 # https://github.com/moby/moby/issues/37965#issuecomment-426853382
@@ -26,5 +27,4 @@ COPY --chown=spring:spring  --from=bootimg application/ ./
 
 EXPOSE 8080
 
-
-
+ENTRYPOINT ["java","-javaagent:opentelemetry-javaagent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
